@@ -1,13 +1,0 @@
-DEFINED_PHASES=install postinst prepare
-DEPEND=>=virtual/udev-180 !<sys-fs/udev-186 virtual/pkgconfig virtual/pkgconfig
-DESCRIPTION=udev startup scripts for openrc
-EAPI=5
-HOMEPAGE=http://www.gentoo.org
-KEYWORDS=alpha amd64 arm arm64 hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86
-LICENSE=GPL-2
-RDEPEND=>=virtual/udev-180 !<sys-fs/udev-186
-RESTRICT=test
-SLOT=0
-SRC_URI=http://dev.gentoo.org/~williamh/dist/udev-init-scripts-26.tar.bz2
-_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	udev	da001465a2e939c93f7ae16947ce3438
-_md5_=503dac8c9636a954abdedf618d1b524d
